proc-macro-error-test/tests/ui-single/direct_trigger.stderr
error: direct MacroError::trigger() test - trigger
 --> $DIR/direct_trigger.rs:5:10
  |
5 | make_fn!(trigger);
  |          ^^^^^^^
